# Clyde

./: package-lock.json
.workbuddy/memory/: 2026-05-16.md  2026-05-17.md
AI/: architecture.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_server.rs  i18n.rs  lib.rs  permission.rs  prefs.rs  tray.rs
src/windows/menu/: App.svelte
